--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   cloud_firestore: ^0.12.9+5
   provider: ^4.1.3
   url_launcher: ^5.4.10
+  shared_preferences: ^0.5.7+3
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
